crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__this__closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/closure.lox
---
success: true
exit_code: 0
----- stdout -----
Foo

----- stderr -----
