crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__this__nested_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/nested_class.lox
---
success: true
exit_code: 0
----- stdout -----
<Outer instance at [POINTER]>
<Outer instance at [POINTER]>
<Inner instance at [POINTER]>

----- stderr -----
