crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__this__this_in_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/this_in_method.lox
---
success: true
exit_code: 0
----- stdout -----
baz

----- stderr -----
