crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__this__this_in_top_level_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/this/this_in_top_level_function.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Can’t use `this` outside of class.
   ╭─[craftinginterpreters/test/this/this_in_top_level_function.lox:2:3]
   │
 2 │   this; // Error at 'this': Can't use 'this' outside of a class.
   │   ────  
───╯
